[metadata]
name = OpenAPIBuilder
version = 1.0.0
author = IBM SOAR
author_email =
license = MIT
description = Build an OpenAPI specification document
url = https://github.com/ibmresilient/resilient-community-apps
long_description = Build an OpenAPI specification document using user guided prompts.
    Use this document with the IBM SOAR low-code capability to define connectors for use in Playbooks.
    <br>
    Links:
    <ul><a target='blank' href='https://ibm.com/mysupport'>Support</a></ul>
    <ul><a target='blank' href='https://ideas.ibm.com/'>Enhancement Requests</a></ul>
classifiers =
    Programming Language :: Python
platforms = any

[options]
packages=find_namespace:
install_requires =
    jsonschema_to_openapi
    openapi_schema_validator
    json2schema
    pyyaml
    xmltodict
include_package_data = True
python_requires = >=3.6


[options.packages.find]
where = src

[options.exclude_package_data]
openapi_builder =
    .bak

[options.entry_points]
console_scripts =
    OpenAPIBuilder = openapi_builder.main:main

[tool.setuptools.packages.find]
where = ["src"]
exclude= 
    *.pyc

