# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python 3
universal=1

[metadata]
name = pytest_resilient_circuits
description = Resilient Circuits fixtures for PyTest
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient-resilient-circuits
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-docs
    API Docs = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
keywords = ibm, soar, pytest, resilient, resilient-circuits, circuits

[options]
packages = find:
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
setup_requires = setuptools_scm
platforms = any
install_requires =
    # Our libraries
    resilient-circuits >= 48.1

    # 3rd party dependencies for all python versions
    requests-mock      ~= 1.9

    # Python >= 3.6
    ConfigParser       ~= 5.2; python_version >= "3.6"
    pytest             ~= 7.0; python_version >= "3.6"

    # Python 2.7
    ConfigParser       ~= 4.0; python_version == "2.7"
    pytest             ~= 4.6; python_version == "2.7"

[options.entry_points]
pytest11 =
    pytest_resilient_circuits = pytest_resilient_circuits.plugin

[options.packages.find]
exclude =
    tests*
