# (c) Copyright IBM Corp. 2023. All Rights Reserved.

[metadata]
name = resilient_app_config_plugins
version = 1.0.0
description = Python base package for IBM SOAR apps App Config Plugins
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient-app-config-plugins
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-docs
    API Docs = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk, plugins, resilient-plugins, app-config-plugins

[options]
packages = find:
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,<3.12
platforms = any
install_requires =
    requests          ~= 2.27
    six               ~= 1.16

    requests-pkcs12   == 1.15;   python_version  >= "3.6"
    requests-pkcs12   == 1.10;   python_version  == "2.7"

    keyring           ~= 23.5;   python_version  > "3.6"
    keyring           ~= 23.4;   python_version  == "3.6"
    keyring           == 18.0.1; python_version  == "2.7"

    cachetools        ~= 5.0;    python_version  > "3.6"
    cachetools        ~= 2.1;    python_version  <= "3.6"
