# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[build-system]
requires = [
    "setuptools ~= 65.5.1;  python_version > '3.6'",
    "setuptools ~= 59.6;    python_version == '3.6'",
    "setuptools ~= 44.0;    python_version == '2.7'",
    "setuptools_scm[toml] < 6.0;  python_version<'3.0'",
    "setuptools_scm[toml] >= 6.0; python_version>='3.0'"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../"
