# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
universal=1

[tool:pytest]
pep8maxlinelength = 120

[metadata]
name = resilient_circuits
description = Framework used to run IBM SOAR Apps and Integrations
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient-circuits
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-python-docs
    API Docs = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
    Change Log = https://ibm.biz/resilient-circuits-changes
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
platforms = any
install_requires =
    # Our libraries
    resilient     >= 51.0.2.1
    resilient-lib >= 51.0.2.1

    # 3rd party dependencies
    stomp-py      ~= 8.2.0
    circuits      ~= 3.2.3
    pysocks       ~= 1.6
    filelock      ~= 3.2
    watchdog      ~= 2.1

[options.entry_points]
console_scripts =
    res-action-test = resilient_circuits.bin.res_action_test:main
    resilient-circuits = resilient_circuits.bin.resilient_circuits_cmd:main

[options.packages.find]
exclude =
    tests*
