# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[metadata]
name = resilient_sdk
description = Python SDK for developing Apps for IBM SOAR
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient-sdk
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
    Change Log = https://ibm.biz/resilient-sdk-changes
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk

[options]
packages = find:
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
setup_requires = setuptools_scm
platforms = any
install_requires =
    # Our libraries
    resilient >= 50.1

    # 3rd party dependencies for all python versions
    genson    ~= 1.2

    # Python >= 3.6
    jinja2    ~= 3.0; python_version >= "3.6"

    # Python 2.7
    jinja2    ~= 2.0; python_version == "2.7"

[options.entry_points]
console_scripts =
    resilient-sdk = resilient_sdk.app:main

[options.packages.find]
exclude =
    tests*
