# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[metadata]
name = resilient_sdk
description = Python SDK for developing Apps for IBM SOAR
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient-sdk
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
    Change Log = https://ibm.biz/resilient-sdk-changes
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
platforms = any
install_requires =
    # Our libraries
    resilient >= 51.0.4.0

    # 3rd party dependencies
    genson    ~= 1.3
    packaging
    jinja2    ~= 3.1

[options.entry_points]
console_scripts =
    resilient-sdk = resilient_sdk.app:main

[options.packages.find]
exclude =
    tests*
