# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[metadata]
name = resilient
description = Python client module for the IBM SOAR REST API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-docs
    API Docs = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
    Change Log = https://ibm.biz/resilient-changes
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk

[options]
packages = find:
include_package_data = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
setup_requires = setuptools_scm
platforms = any
install_requires =
    # General dependencies applicable to all python versions
    retry2            ~= 0.9
    requests          ~= 2.27
    requests-toolbelt ~= 1.0
    six               ~= 1.16

    # Python >= 3.6
    jwcrypto          ~= 1.4.0;  python_version >= "3.6"

    # Python > 3.6
    keyring           ~= 23.5;   python_version  > "3.6"
    cachetools        ~= 5.0;    python_version  > "3.6"
    setuptools        ~= 65.5.1; python_version > "3.6"

    # Python 3.6
    keyring           ~= 23.4;   python_version == "3.6"
    cachetools        ~= 2.1;    python_version == "3.6"
    setuptools        ~= 59.6;   python_version == "3.6"

    # Python 2.7
    # configparser is only required for py 2.7 as it is packaged with python in > 3.2
    configparser      ~= 4.0;    python_version == "2.7"
    cachetools        ~= 2.1;    python_version == "2.7"
    keyring           == 18.0.1; python_version == "2.7"
    setuptools        ~= 44.0;   python_version == "2.7"

[options.entry_points]
console_scripts =
    finfo = resilient.bin.finfo:main
    gadget = resilient.bin.gadget:main
    res-keyring = resilient.bin.res_keyring:main

[options.packages.find]
exclude =
    tests*
