# (c) Copyright IBM Corp. 2010, 2023. All Rights Reserved.

[metadata]
name = resilient
description = Python client module for the IBM SOAR REST API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ibmresilient/resilient-python-api/tree/main/resilient
author = IBM SOAR
license = MIT
project_urls =
    Documentation = https://ibm.biz/soar-docs
    API Docs = https://ibm.biz/soar-python-docs
    IBM Community = https://ibm.biz/soarcommunity
    Change Log = https://ibm.biz/resilient-changes
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = ibm, soar, resilient, resilient-circuits, circuits, resilient-sdk, sdk

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
platforms = any
install_requires =
    # App Config Plugins required from v49.0 on
    resilient-app-config-plugins

    # 3rd party dependencies
    retry2            ~= 0.9
    requests-toolbelt ~= 1.0
    six               ~= 1.16
    keyring           ~= 23.5
    cachetools        ~= 5.0
    setuptools        ~= 78.1
    jwcrypto          ~= 1.5.6
    requests          ~= 2.32

[options.entry_points]
console_scripts =
    finfo = resilient.bin.finfo:main
    gadget = resilient.bin.gadget:main
    res-keyring = resilient.bin.res_keyring:main

[options.packages.find]
exclude =
    tests*
